--- a/.envsample
+++ b/.envsample
@@ -13,5 +13,5 @@ CLOUDINARY_API_KEY = scilhjlsk
 pghost=ckjsc
 pguser=ishdjk
 pgport=skjsjks
-pgpassword=skhxjs
+pgpassword=Tmtp13#$
 pgdatabase=Hdjisekajsi14$!
