--- a/.envsample
+++ b/.envsample
@@ -3,7 +3,7 @@ PORT = lkcjdacknjlkd
 JWT_TOKEN = slkcnskjcbs
 user = csldjknsda
 pass = csiljcnksaca
-clientID=lcknskanknakl
+clientID=lcknskanknakld
 clientSecret=sojhxslkcnsc
 paystackSecret = cslkhsd
 paystackPublic = cdlkjns
